<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hu.montlikadani</groupId>
	<artifactId>tablist</artifactId>
	<packaging>jar</packaging>
	<name>tablist</name>
	<version>5.4.7</version>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<directory>target/</directory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>ess-repo</id>
			<url>https://ci.ender.zone/plugin/repository/everything/</url>
		</repository>
		<repository>
			<id>papi-repo</id>
			<url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>bungeecord-repo</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public</url>
		</repository>
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>minecraft-repo</id>
			<url>https://libraries.minecraft.net/</url>
		</repository>
		<repository>
			<id>pex-repo</id>
			<url>https://repo.glaremasters.me/repository/permissionsex/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Mojang -->
		<dependency>
			<groupId>com.mojang</groupId>
			<artifactId>authlib</artifactId>
			<version>1.6.25</version>
			<scope>provided</scope>
		</dependency>
		<!-- Spigot API -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.16.3-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- BungeeCord -->
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-proxy</artifactId>
			<version>1.16-R0.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-api</artifactId>
			<version>1.16-R0.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.ess3</groupId>
			<artifactId>EssentialsX</artifactId>
			<version>2.18.1</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>1_8_R2Provider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>1_8_R1Provider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>NMSProvider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>UpdatedMetaProvider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>ReflectionProvider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>LegacyProvider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>FlattenedProvider</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.papermc</groupId>
					<artifactId>paperlib</artifactId>
				</exclusion>
				<exclusion>
					<groupId>net.ess3</groupId>
					<artifactId>1_8Provider</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>me.rayzr522</groupId>
					<artifactId>jsonmessage</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>craftbukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.MyzelYam</groupId>
			<artifactId>SuperVanish</artifactId>
			<version>master-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.MyzelYam</groupId>
			<artifactId>PremiumVanishAPI</artifactId>
			<version>master-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- New PEX -->
		<dependency>
			<groupId>ca.stellardrift.permissionsex</groupId>
			<artifactId>permissionsex-bukkit</artifactId>
			<version>2.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.jetbrains.kotlin</groupId>
					<artifactId>kotlin-stdlib-jdk8</artifactId>
				</exclusion>
				<exclusion>
					<groupId>ca.stellardrift.permissionsex</groupId>
					<artifactId>
						permissionsex-profile-resolver
					</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-jdk14</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.spongepowered</groupId>
					<artifactId>configurate-yaml</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.spongepowered</groupId>
					<artifactId>configurate-hocon</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.spongepowered</groupId>
					<artifactId>configurate-gson</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Old PEX -->
		<dependency>
			<groupId>ru.tehkode</groupId>
			<artifactId>PermissionsEx</artifactId>
			<version>1.23.4</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/PermissionsEx-1.23.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>com.github.montlikadani</groupId>
			<artifactId>RageMode</artifactId>
			<version>1.8.4</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>com.Zrips.CMI.CMI</groupId>
			<artifactId>CMIAPI</artifactId>
			<version>7.6.2.0</version>
			<scope>system</scope>
			<systemPath>${project.basedir}/lib/CMIAPI7.6.2.0.jar</systemPath>
		</dependency>
	</dependencies>
</project>
